# AI-Auditor

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.override.example.yml  docker-compose.yml  fly.toml  make.ps1  pyproject.toml  reset.bat  setup.bat  start.bat  stop.bat
.github/workflows/: ci.yml  red-team.yml
adversarial/: __init__.py  gate_harness.py  runner.py
adversarial/chained/: memory_persistence.py  multi_agent_collusion.py  phishing_chain.py
adversarial/per_category/: __init__.py
auditor/: __init__.py  config.py  harness_runner.py  ids.py  logging.py  main.py
auditor/api/: __init__.py  admin.py  agent_routes.py  auth.py  auth_routes.py  health.py  hitl_routes.py  incidents_routes.py  replay.py  search_routes.py  shadow_routes.py
auditor/async_pipeline/: __init__.py  baseline.py  budget_tracker.py  orchestrator.py  pipeline.py  runtime_policy.py  sampler.py  signals.py
auditor/audit_log/: __init__.py  chain.py  query.py  redactor.py  verifier.py  writer.py
auditor/auth/: __init__.py  ca.py  init_ca.py  jwt.py  oidc.py  rbac.py  secrets.py
auditor/calibration/: __init__.py  audit_of_audit.py  ground_truth.py  label.py  metrics.py  nightly.py
auditor/db/: __init__.py  models.py  session.py  tenancy.py
auditor/detectors/: __init__.py  asi01_goal_hijack.py  asi02_tool_misuse.py  asi03_identity_abuse.py  asi04_catalog_integrity.py  asi04_supply_chain.py  asi05_code_execution.py  asi06_cross_run.py  asi06_memory_poisoning.py  asi07_inter_agent.py  asi08_cascading.py  asi09_trust_exploit.py  asi10_rogue_agent.py  base.py  detector_lifecycle_policy.yaml  instruction_following.py  lifecycle.py  registry.py
auditor/embeddings/: __init__.py  base.py  local_fastembed.py  stub.py  voyage.py
auditor/enforcement/: __init__.py  base.py  cgroup.py  ipc_response.py  seccomp.py  windows_jobobject.py
auditor/events/: __init__.py  correlator.py  proto_bridge.py  receiver.py  schemas.py  store.py
auditor/hitl/: __init__.py  checkpoint.py  notifier.py  queue.py  router.py
auditor/incidents/: __init__.py  lifecycle.py  service.py
auditor/inline_gate/: __init__.py  budget.py  decide.py  divergence.py  pii_scanner.py  policy_engine.py
auditor/involuntary/: __init__.py  base.py  linux.py  windows.py
auditor/ipc/: __init__.py  auth.py  dispatch.py  protocol.py  server.py  transport.py
auditor/judge/: __init__.py  cache.py  client.py
auditor/observability/: __init__.py  metrics.py
auditor/proto_gen/: __init__.py  decisions_pb2.py  decisions_pb2.pyi  events_pb2.py  events_pb2.pyi  verdicts_pb2.py  verdicts_pb2.pyi
auditor/scanner/: __init__.py  memory_log_scan.py
auditor/verdicts/: __init__.py  aggregator.py  checks.py  schemas.py  severity.py
harness/: __init__.py  config.py  intra_agent_bus.py  main.py
harness/agents/: __init__.py  base.py  generic_executor.py  itsm_resolver.py  itsm_triage.py
harness/memory/: __init__.py  long_term.py  session.py
harness/telemetry/: __init__.py  decorators.py  intent.py  sdk.py
harness/tools/: __init__.py  registry.py
hitl_ui/frontend/: index.html  package-lock.json  package.json  vite.config.ts
involuntary/linux_ebpf/: Cargo.toml
involuntary/linux_ebpf/src/: cgroup_filter.rs  main.rs
involuntary/linux_ebpf/src/probes/: connect.rs  execve.rs  openat.rs  sendto.rs
involuntary/windows_sysmon/: subscriber.py  sysmon_config.xml  translator.py
litellm/: config.yaml
observability/: otel-collector.yml  prometheus.yml
opa/policies/: .gitkeep  default.rego
proto/: decisions.proto  events.proto  verdicts.proto
scripts/: _smoke_agent_api.py  bench_gate.py  db_introspect.py  demo_review_flow.py  gen_proto.py  mint_harness_cert.py  seed_demo.py  show_run.py  sweep_em_dash.py  wipe_run_data.py
scripts/cloud/: start.sh
scripts/linux/: bootstrap.sh  demo.sh  init.sh
scripts/windows/: bootstrap.ps1  demo.ps1  demo_agent.ps1  init.ps1  start_all.ps1  stop.ps1  stop_all.ps1
tests/: conftest.py
tests/integration/: .gitkeep  test_audit_log_db.py  test_audit_pipeline.py  test_budget.py  test_flag_incident_wiring.py  test_gate_e2e.py  test_gate_latency.py  test_gate_opa.py  test_orphan_reap.py  test_rls_isolation.py
tests/red_team/: .gitkeep  test_asi02_tool_misuse.py  test_asi05_code_execution.py  test_chained_scenarios.py  test_divergence_lying_harness.py  test_memory_persistence.py  test_orchestrator_asi.py  test_per_category_fixtures.py
tests/unit/: test_admin_role_grant.py  test_admin_routes.py  test_aggregator.py  test_api_auth.py  test_audit_chain.py  (+52 more)
(+80 files in other folders)
