[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-auditor"
version = "0.1.0"
description = "Runtime security auditor for autonomous AI agents: dual-channel telemetry, inline gate, ASI Top-10 detectors, HITL, calibration."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Proprietary" }
authors = [{ name = "Aditya Kamat" }]

# Base deps = everything Phase 1 needs (skeleton boots, migrations apply, unit tests pass)
# plus light, stable libs used in later phases. Heavy / phase-specific stacks live in extras
# so the Phase-1 install is small and low-risk on Windows wheels. `pip install -e ".[all]"`
# pulls the full production set.
dependencies = [
  # Web / async API
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  # Settings / validation
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  # Database (async)
  "sqlalchemy[asyncio]>=2.0.30",
  "alembic>=1.13",
  "asyncpg>=0.29",
  "pgvector>=0.3.0",
  # KV / object store / HTTP
  "redis>=5.0",
  "minio>=7.2",
  "httpx>=0.27",
  # Serialization (protobuf runtime; protoc compiler is in [dev])
  "protobuf>=5.27",
  # Crypto (private CA, agent signing)
  "cryptography>=42.0",
  # Observability / logging
  "structlog>=24.1",
  "prometheus-client>=0.20",
  "opentelemetry-api>=1.25",
  "opentelemetry-sdk>=1.25",
  # Auth (light; primarily Phase 7)
  "pyjwt>=2.8",
  # Utilities
  "tenacity>=8.3",
  "orjson>=3.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "grpcio-tools>=1.64",      # provides protoc to generate *_pb2.py / *.pyi
  "types-protobuf>=5.27",
  "asgi-lifespan>=2.1",      # exercise FastAPI lifespan in unit tests
]
# Phase 2 — inline gate PII/secret scanning
gate = [
  "presidio-analyzer>=2.2.355",
  "presidio-anonymizer>=2.2.355",
  "spacy>=3.7",
]
# Phase 2 — AutoGen/AG2 multi-agent harness
harness = [
  "ag2>=0.11",
  "anthropic>=0.40",
  "openai>=1.40",   # AG2 constructs an OpenAI-compatible client (LiteLLM proxy) at agent init
]
# Phase 4 — LLM judge via LiteLLM proxy (avoid compromised 1.82.7/1.82.8)
judge = [
  "litellm>=1.86,<2.0",
  "anthropic>=0.40",
]
# Default local embedder (lazy-imported; model fetched at bootstrap, not import)
embeddings-local = [
  "fastembed>=0.3",
  "onnxruntime>=1.18",
]
embeddings-voyage = [
  "voyageai>=0.3",
]
# Phase 7 — OIDC integration point
auth = [
  "authlib>=1.3",
]
# Phase 7 — OpenTelemetry instrumentation (beta pins kept out of base)
otel = [
  "opentelemetry-instrumentation-fastapi>=0.46b0",
]
# Integration tests (Phase 2+): real Postgres/Redis/MinIO via containers
integration = [
  "testcontainers>=4.5",
]
# Windows involuntary telemetry + enforcement (Phase 3)
windows = [
  "pywin32>=306; sys_platform == 'win32'",
  "psutil>=6.0",
  "wmi>=1.5; sys_platform == 'win32'",
]
all = [
  "ai-auditor[dev,gate,harness,judge,embeddings-local,embeddings-voyage,auth,otel,integration,windows]",
]

[tool.hatch.build.targets.wheel]
packages = ["auditor", "harness", "adversarial"]

[tool.ruff]
line-length = 110
target-version = "py312"
src = ["auditor", "harness", "adversarial", "tests"]
extend-exclude = ["auditor/proto_gen", "hitl_ui", "involuntary/linux_ebpf"]

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I isort, UP pyupgrade, B bugbear, ASYNC, S bandit-style
select = ["E", "W", "F", "I", "UP", "B", "ASYNC", "S"]
ignore = [
  "E501",   # line length handled by formatter
  "B008",   # FastAPI Depends() in defaults is idiomatic
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "B"]
"auditor/proto_gen/**" = ["F", "E", "W", "I", "UP", "B"]
"scripts/**" = ["S"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"
markers = [
  "integration: requires live backing services (Postgres/Redis/MinIO/OPA)",
  "windows: Windows-only behaviour",
  "linux: Linux-only behaviour",
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = false
exclude = ["auditor/proto_gen/.*", "hitl_ui/.*", "involuntary/linux_ebpf/.*"]
