# Phase 3 scaffold - these eBPF programs compile and run on Linux only (verified in Phase 3/CI).
# Do NOT attempt to build on Windows; this manifest exists so the seam is in the tree.
[package]
name = "auditor-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya = "0.13"

[[bin]]
name = "auditor-ebpf"
path = "src/main.rs"
